--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</nav>
 		<div class="container">
 			<h2 class="header center">BitEruptor</h2>
-			<h3 class="header center light">Are you Safe Yet?</h3>
+			<h3 class="header center light">Are you <span class="typed">Safe</span> Yet?</h3>
 						<div class="row">
 								<div class="slider">
 									<ul class="slides">
@@ -32,7 +32,8 @@
 									</ul>
 								</div>
 						</div>
-			  <a class="btn-floating btn-large waves-effect waves-light red center" href = "#section02"><i class="material-icons">add</i></a>
+			  <div class="center">			  <a class="btn-floating btn-large waves-effect waves-light red center" href = "#section02"><i class="material-icons">add</i></a></div>
+
 
 		</div>
 	<!-- <a href="#section05"><span></span>Scroll</a> -->
@@ -45,15 +46,21 @@
 				<div id="terminal"></div>
 			</div>
 		</section>
-		<section id="section03">
-			<div class="container">
-				<h2>Or...Click On the Buttons Below</h2>
+		<section id="section03" style = "margin:0">
+		<div class="container" style = "">
+			<h2 class="header light center">Check Out Our Other Assignments!</h2>
+			<div class="row">
+				<img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTQOHGlMCrSeziRCyuMFuBKNjG3foTb7DQh2pRwi8gH1LPueg3y">
+				<img src="http://www.queensbiology.com/dna-biology1.jpg">
+				<img src="http://image.shutterstock.com/display_pic_with_logo/253597/230705539/stock-photo-programming-code-abstract-screen-of-software-developer-computer-script-more-similar-in-my-230705539.jpg">
 			</div>
+		</div>
 		</section>
 	<script type="text/javascript" src = "https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/0.10.8/js/jquery.terminal.min.js"></script>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/0.10.8/css/jquery.terminal.min.css" rel="stylesheet"/>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 	<script src = "js/custom.js"></script>
+	<script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js"></script>
 </body>
 </html>
