--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
 	<title>Home: BitEruptor Technologies</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</css>
+
+
+</head>
 <body>
-	<section id = "sliderz">
+	<section id = "memes" background = "https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQaF8-ahq4yNpO6dQ_rUhcB0C7laqZABCBr_aqE6ZslPCb6lDxq_w">
 		<nav class = "hide-on-small-only green -lighten2">
 			<ul class = "right">
 				<li><a href="index.html">Home</a></li>
-				<li><a href=""></a></li>
+				<li><a href="english.html">English</a></li>
 			</ul>
 		</nav>
 		<div class="container">
-			<h2 class="header center">BitEruptor</h2>
-			<h3 class="header center light">Are you <span class="typed">Safe</span> Yet?</h3>
+			<h2 class="header center green-text">BitEruptor</h2>
+			<h3 class="header center light green-text">Are you <span class="typed">Safe</span> Yet?</h3>
 						<div class="row">
 								<div class="slider">
 									<ul class="slides">
-										<li><img src="https://static.pexels.com/photos/34676/pexels-photo-large.jpg"></li>
+									<li><img alt = "Logo" src="BitEruptorLogo.png"></li>
+										<li><img alt = "Code" src="https://static.pexels.com/photos/34676/pexels-photo-large.jpg"></li>
+										<li><img alt = "Code2"src="https://static.pexels.com/photos/101808/pexels-photo-101808-medium.jpeg"></li>
 									</ul>
 								</div>
 						</div>
@@ -46,21 +50,38 @@
 				<div id="terminal"></div>
 			</div>
 		</section>
+		<section id="section03">
+		<div class = "center">
+			<h2 class="center light header">PSA</h2>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/NjXFeNFdQbw" frameborder="0" allowfullscreen></iframe>
+		</div>
+
+		</section>
 		<section id="section03" style = "margin:0">
 		<div class="container" style = "">
 			<h2 class="header light center">Check Out Our Other Assignments!</h2>
-			<div class="row">
-				<img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTQOHGlMCrSeziRCyuMFuBKNjG3foTb7DQh2pRwi8gH1LPueg3y">
-				<img src="http://www.queensbiology.com/dna-biology1.jpg">
-				<img src="http://image.shutterstock.com/display_pic_with_logo/253597/230705539/stock-photo-programming-code-abstract-screen-of-software-developer-computer-script-more-similar-in-my-230705539.jpg">
+			<div class="row" height = "400">
+				<img alt = "English" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTQOHGlMCrSeziRCyuMFuBKNjG3foTb7DQh2pRwi8gH1LPueg3y" width = "300" height = "300">
+				<img alt = "Biology" src="http://www.queensbiology.com/dna-biology1.jpg" width = "300" height = "300">
+				<img alt = "Image3" src="http://image.shutterstock.com/display_pic_with_logo/253597/230705539/stock-photo-programming-code-abstract-screen-of-software-developer-computer-script-more-similar-in-my-230705539.jpg" width = "300" height = "300">
 			</div>
 		</div>
 		</section>
+		<footer class = "page-footer white-text green -lighten2" style = "margin:0;margin-bottom:10">
+			<div class = "container">
+				<div class = "row">
+					<div class = "col s4">
+						<h2>Last Updated</h2>
+						<p>May 24, 2016.</p>
+					</div>
+				</div>
+			</div>
+		</footer>
 	<script type="text/javascript" src = "https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/0.10.8/js/jquery.terminal.min.js"></script>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/0.10.8/css/jquery.terminal.min.css" rel="stylesheet"/>
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-	<script src = "js/custom.js"></script>
+	   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 	<script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js"></script>
+			<script src = "js/custom.js"></script>
 </body>
 </html>
