Pretty much done...

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 			<ul class = "right">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="english.html">English</a></li>
+				<li><a href="math.html">Math</a></li>
+				<li><a href="biology.html">Biology</a></li>
 			</ul>
 		</nav>
 		<div class="container">
@@ -36,7 +38,7 @@
 									</ul>
 								</div>
 						</div>
-			  <div class="center">			  <a class="btn-floating btn-large waves-effect waves-light red center" href = "#section02"><i class="material-icons">add</i></a></div>
+			  
 
 
 		</div>
@@ -60,10 +62,12 @@
 		<section id="section03" style = "margin:0">
 		<div class="container" style = "">
 			<h2 class="header light center">Check Out Our Other Assignments!</h2>
-			<div class="row" height = "400">
-				<img alt = "English" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTQOHGlMCrSeziRCyuMFuBKNjG3foTb7DQh2pRwi8gH1LPueg3y" width = "300" height = "300">
-				<img alt = "Biology" src="http://www.queensbiology.com/dna-biology1.jpg" width = "300" height = "300">
-				<img alt = "Image3" src="http://image.shutterstock.com/display_pic_with_logo/253597/230705539/stock-photo-programming-code-abstract-screen-of-software-developer-computer-script-more-similar-in-my-230705539.jpg" width = "300" height = "300">
+			<div class = "col s12">
+				<div class="">
+					<img alt = "English" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTQOHGlMCrSeziRCyuMFuBKNjG3foTb7DQh2pRwi8gH1LPueg3y" class = "col s4">
+					<img alt = "Biology" src="http://www.queensbiology.com/dna-biology1.jpg" width = "300" height = "300" class = "col s4">
+					<img alt = "Image3" src="http://image.shutterstock.com/display_pic_with_logo/253597/230705539/stock-photo-programming-code-abstract-screen-of-software-developer-computer-script-more-similar-in-my-230705539.jpg" width = "300" height = "300" class = "col s4">
+				</div>
 			</div>
 		</div>
 		</section>
