--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<nav class = "hide-on-small-only green -lighten2">
 			<ul class = "right">
 				<li><a href="index.html">Home</a></li>
+				<li><a href="aboutus.html">About Us</a></li>
 				<li><a href="english.html">English</a></li>
 				<li><a href="math.html">Math</a></li>
 				<li><a href="biology.html">Biology</a></li>
@@ -75,8 +76,7 @@
 			<div class = "container">
 				<div class = "row">
 					<div class = "col s4">
-						<h2>Last Updated</h2>
-						<p>May 24, 2016.</p>
+						<script type="text/javascript">document.write(new Date($.now()))</script>
 					</div>
 				</div>
 			</div>
