--- a/english.html
+++ b/english.html
@@ -28,9 +28,10 @@
 
 </head>
 <body>
-	<nav class = "hide-on-small-only green -lighten2">
+		<nav class = "hide-on-small-only green -lighten2">
 			<ul class = "right">
 				<li><a href="index.html">Home</a></li>
+				<li><a href="aboutus.html">About Us</a></li>
 				<li><a href="english.html">English</a></li>
 				<li><a href="math.html">Math</a></li>
 				<li><a href="biology.html">Biology</a></li>
@@ -40,6 +41,7 @@
 	<div class="container center">
 		<h2 class="center black-text">PSA</h2>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/NjXFeNFdQbw" frameborder="0" allowfullscreen></iframe>
+		<p class="center">Gullible hospital workers have found that they have become victims of a phishing attack which could have been easily preventable with a service like BitEruptor. The hacker send out a link that was indentical to gmail but</p>
 	</div>
 	<div class = "container">
 		<h2 class = "center">Business Letter</h2>
