--- a/math.html
+++ b/math.html
@@ -23,6 +23,7 @@
 		<nav class = "hide-on-small-only green -lighten2">
 			<ul class = "right">
 				<li><a href="index.html">Home</a></li>
+				<li><a href="aboutus.html">About Us</a></li>
 				<li><a href="english.html">English</a></li>
 				<li><a href="math.html">Math</a></li>
 				<li><a href="biology.html">Biology</a></li>
