--- a/english.html
+++ b/english.html
@@ -41,10 +41,13 @@
 	<div class="container center">
 		<h2 class="center black-text">PSA</h2>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/NjXFeNFdQbw" frameborder="0" allowfullscreen></iframe>
-		<p class="center">Gullible hospital workers have found that they have become victims of a phishing attack which could have been easily preventable with a service like BitEruptor. The hacker send out a link that was indentical to gmail but</p>
+		<p class="center">     In this PSA, BitEruptor describes the problem of online phishing and demonstrates how their Chrome extension, named BitEruption, works. With Isaac (hacker and international speaker(Japanese, Amharic)), Aleimah (voice), Uialii (news broadcaster), Courtney (BitEruption explainer), Jocelyn (cameraman and Taiwanese speaker), and MaiAngel (nurse and Japanese speaker #2), the BitEruptor team explains how the world can greatly benefit from their chrome extension. 
+     In the scenes, the hacker obtains information about Johnson Hospital when a nurse accidentally signs into a phishing website that mimics Gmail's website. The news broadcaster announces the unfortunate news and demonstrates that Johnson Hospital is not the only place affected by hackers. The Ethiopians, Taiwanese, and Japanese (to name a few) are victims of unfortunate phishing scams. However, after the nurse downloads BitEruptor, the extension prevents her from going to the phishing site. A BitEruption explainer describes the process of how BitEruption works to identify the phishing site. Finally, the PSA ends with the team members of BitEruptor.
+	</p>
 	</div>
 	<div class = "container">
 		<h2 class = "center">Business Letter</h2>
+		<p>BitEruptor seeks to get a funding of $100,000 from Symantec Corparation, a company well-known for its Norton anti-virus software. $75,000 will be used in hiring employees as well as other items like BitEruptor offices and computers. </p>
 <iframe src="https://docs.google.com/document/d/1MHBtr-7jb8hYzBxVMRiKfkoDJ7HHgiVdoSJjkFl3wWE/pub?embedded=true" width = "100%" height = "100%" allowfullscreen frameborder = "0"></iframe>	</div>
 		<footer class = "page-footer white-text green -lighten2" style = "margin:0;margin-bottom:10">
 			<div class = "container">
