--- a/math.html
+++ b/math.html
@@ -23,6 +23,7 @@
 		<nav class = "hide-on-small-only green -lighten2">
 			<ul class = "right">
 				<li><a href="index.html">Home</a></li>
+				<!-- <li><a href="aboutus.html">About</a></li><!--  --> -->
 				<li><a href="aboutus.html">About Us</a></li>
 				<li><a href="english.html">English</a></li>
 				<li><a href="math.html">Math</a></li>
@@ -30,6 +31,6 @@
 			</ul>
 		</nav>
 		<h2 class="center green-text">Math</h2>
-		<iframe src="https://docs.google.com/document/d/1eTkBcPHCp709HUxQKdL4C_rD3xJHKd9K8oZIuq1-Gwk/pub?embedded=true" onload="this.width=screen.width;this.height=screen.height;"></iframe>
+		<iframe src="https://docs.google.com/document/d/1eTkBcPHCp709HUxQKdL4C_rD3xJHKd9K8oZIuq1-Gwk/pub" onload="this.width=screen.width;this.height=screen.height;"></iframe>
 </body>
 </html>
